--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ keywords: 奔跑的树懒先生的博客
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
-repository: mzlogin/mzlogin.github.io
+repository: hai1995/hai1995.github.io
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
     jsdelivr:
