--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,19 +1,9 @@
-- name: Software Engineer Keywords
+- name: 语言能力
   keywords:
-      - Java
-      - C++
+      - Javascript
+      - PHP
       - Python
-      - Design Patterns
 
-- name: Mobile Developer Keywords
+- name: 软件能力
   keywords:
-      - Android
-      - Reverse Engineering
-
-- name: Windows Developer Keywords
-  keywords:
-      - Win32 SDK
-      - DuiLib
-      - WTL
-      - COM
-      - WinDbg
+      - photo shop
