--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ navs:
     href: /categories/
     label: 分类
 
-#   -
-#     href: /archives/
-#     label: 归档
+   -
+     href: /archives/
+     label: 归档
 
 #   -
 #     href: /open-source/
