--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,5 +7,5 @@
   url: https://hai1995.github.io
 
 - sitename: QQ
-  name: 树懒先生 248437901
+  name: 248437901
   url: http://wpa.qq.com/msgrd?v=3&uin=248437901&site=qq&menu=yes
