--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ keywords: 奔跑的树懒先生的博客
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
-repository: hai1995/hai1995.github.io
+repository: hai1995.github.io/blog
 # repository： hai1995/blog.dbixb.top
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
@@ -21,7 +21,7 @@ cdn:
 components:
     # 分享
     share:
-        enabled: false
+        enabled: true
     # 不蒜子访问统计
     busuanzi:
         enabled: true
